--- a/client/templates/news.html
+++ b/client/templates/news.html
@@ -4,9 +4,9 @@
 			<table>
 				<tr>
 					<td class = "date text-center">
-						<span><h1>{{new.date}}<h1></span>
+						<span><h1>{{getNews[paramId - 1].date}}<h1></span>
 					</td>
-					<td class = "news-text">{{new.text}}</td>
+					<td class = "news-text">{{getNews[paramId - 1].text}}</td>
 				</tr>
 			</table>
 		</div>
